Add /peers route to get the validator peers
